# rust-stream-deck

./: Cargo.toml  devenv.nix
.github/workflows/: test.yml
crates/bevy_streamdeck/: Cargo.toml
crates/bevy_streamdeck/src/: lib.rs  streamdeck.rs  system_input.rs
crates/legacy/: Cargo.toml
crates/legacy/src/audio/: audio.rs  device.rs  stream.rs
crates/legacy/src/cmd/: debug_audio_liststreams.rs  debug_deck_listdevices.rs  debug_deck_whiteout.rs
crates/streamdeck/: Cargo.toml  PROTOCOL.md
crates/streamdeck/src/: bin.rs  device.rs  device_constants.rs  error.rs  lib.rs  model.rs
src/: app.rs  main.rs  sound.rs  streamdeck.rs  util.rs
src/audio/: audio.rs  device.rs  mod.rs
src/cmd/: debug_audio_listdevices.rs  debug_deck_listdevices.rs  debug_deck_whiteout.rs  mod.rs
src/deck/: mod.rs
src/sound/: pulse.rs
src/streamdeck/: text.rs
streamdeck-cli/: Cargo.toml
streamdeck-cli/src/: main.rs
