[package]
name = "rust-stream-deck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
elgato-streamdeck = "0.5.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"

[dependencies.bevy]
version = "0.13.1"
default-features = false
features = ["bevy_asset", "bevy_scene", "png"]

[dependencies.hidapi]
default-features = false
features = ["linux-static-libusb"]
