[package]
name = "rust-stream-deck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
crossbeam-channel = "0.5.12"
elgato-streamdeck = "0.5.0"
image = "=0.24.6" # I hate this
log = "0.4.21"
pipewire = "0.8.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
tracing = { version = "0.1.40", features = ["log"] }

[dependencies.bevy]
version = "0.13.1"
default-features = false
features = ["bevy_asset", "bevy_scene", "png", "multi-threaded"]

[dependencies.hidapi]
default-features = false
features = ["linux-static-libusb"]
