[package]
name = "rust-stream-deck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-hid = { path = "../async-hid" }
futures-lite = "2.3.0"
image = { version = "0.25.1", default-features = false, features = ["rayon", "jpeg"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
pulseaudio = "0.2.1"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
