[package]
name = "streamdeck-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", default-features = false, features = ["bevy_asset", "bevy_render", "png"] }
bevy_streamdeck = { version = "0.1.0", path = "../crates/bevy_streamdeck" }
rand = "0.8.5"
