[package]
name = "bevy_streamdeck"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11.2", default-features = false, features = ["bevy_asset", "bevy_render", "png"] }
crossbeam-channel = "0.5.8"
elgato-streamdeck = "0.4.1"
image = "0.24.7"
imageproc = "0.23.0"
rusttype = "0.9.3"
